--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body{
+  margin:0;
+  padding: 0;
+  font-family:'cobol','Arial',sans-serif;
+  font-size: 14px;
+}
+
+@font-face{
+  font-family: cobol;
+  src: url("Cobol Regular.ttf")
+}
+
+
+.container{
+  margin:0 auto;
+  width:100%;
+  height:100vh;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("Fichier 7.png");
+  background-color: #111;
+  background-size: 96%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.container .searching{
+  text-transform: uppercase;
+  font-size:50px;
+  -webkit-text-stroke-width: 2px;
+  overflow: hidden;
+  color:#888;
+}
+
+
+.loadbar{
+  width:600px;
+  height:120px;
+  position: relative;
+  overflow: hidden;
+}
+
+.wrapper{
+  overflow: hidden;
+  /* overflow-y: scroll; */
+  display: flex;
+  flex-flow: row nowrap;
+  position: absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  width:400%;
+  height:180%;
+}
+
+#caret{
+  pointer-events: none;
+  z-index: 11 ;
+  opacity: 0.7;
+  background-color: transparent;
+}
+
+.input{
+  /* caret-color: transparent; */
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 50px;
+  font-family: cobol;
+  z-index: 10;
+  display: block;
+  width:100%;
+  height: 100%;
+  background:transparent;
+  border: none;
+  -webkit-text-stroke-width: 1px;
+}
+
+input:focus{
+  outline: none;
+}
+
+.bar{
+  width:50px;
+  height:100%;
+  background:#444;
+  margin:0;
+  transform-origin: center;
+  transform: rotate(45deg);
 }
