--- a/src/style2.css
+++ b/src/style2.css
@@ -4,12 +4,18 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'cobol', 'Arial', sans-serif;
+  font-family: 'acr_bold', 'Arial', sans-serif;
   font-size: 14px; }
 
 @font-face {
   font-family: cobol;
   src: url("Cobol Regular.ttf"); }
+@font-face {
+  font-family: acr_bold;
+  src: url("Acronym-Bold.ttf"); }
+@font-face {
+  font-family: acr_reg;
+  src: url("Acronym-Regular.ttf"); }
 .container {
   margin: 0 auto;
   width: 100%;
@@ -18,8 +24,6 @@ body {
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  background-image: url("Fichier 7.png");
-  background-color: #111;
   background-size: 96%;
   background-position: center;
   background-repeat: no-repeat; }
@@ -43,21 +47,19 @@ body {
         margin: 5px; }
       .container .container-wrapper .logo span {
         text-transform: uppercase;
-        color: #888;
+        color: #222;
         position: relative;
         font-size: 45px;
-        z-index: 10;
-        -webkit-text-stroke-width: 2px; }
+        z-index: 10; }
       .container .container-wrapper .logo span:after {
         text-align: center;
         width: 150%;
         content: "THE PIRATE BAY";
-        color: #888;
+        color: #222;
         position: absolute;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%) scale(1.4);
-        -webkit-text-stroke-width: 2px;
         opacity: 0.2;
         z-index: 9;
         letter-spacing: 2px; }
@@ -68,11 +70,10 @@ body {
       .container .container-wrapper .query .searching {
         display: inline-block; }
         .container .container-wrapper .query .searching .searchingtxt {
-          -webkit-text-stroke-width: 2px;
           overflow: hidden;
           text-transform: uppercase;
           font-size: 50px;
-          color: #888; }
+          color: #222; }
       .container .container-wrapper .query .loadbar {
         width: 600px;
         height: 120px;
@@ -83,18 +84,18 @@ body {
           text-transform: uppercase;
           text-align: center;
           font-size: 50px;
-          font-family: cobol;
+          font-family: 'acr_reg';
           z-index: 10;
           display: block;
           width: 100%;
           height: 100%;
           background: transparent;
           border: none;
-          -webkit-text-stroke-width: 1px; }
+          color: rgba(255, 255, 255, 0.8); }
         .container .container-wrapper .query .loadbar input:focus {
           outline: none; }
         .container .container-wrapper .query .loadbar .wrapper {
-          opacity: 0.7;
+          opacity: 1;
           overflow: hidden;
           /* overflow-y: scroll; */
           display: flex;
@@ -108,7 +109,7 @@ body {
           .container .container-wrapper .query .loadbar .wrapper .bar {
             width: 50px;
             height: 100%;
-            background: #444;
+            background: #222;
             margin: 0;
             transform-origin: center;
             transform: rotate(45deg); }
@@ -126,7 +127,7 @@ body {
               margin: 10px;
               width: 90%;
               height: 67px;
-              color: #888;
+              color: #222;
               padding: 10px 20px;
               transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out, height 0.3s linear; }
               .container .container-wrapper .query .loadbar .wrapper #Api_results .query-item .magnet {
@@ -160,12 +161,11 @@ body {
     width: 80vw; } }
 @media (max-width: 550px) {
   .container .container-wrapper .query .searching {
-    font-size: 30px;
-    -webkit-text-stroke-width: 1px; }
+    font-size: 30px; }
   .container .container-wrapper .query .loadbar {
     width: 80vw;
     height: 80px; }
     .container .container-wrapper .query .loadbar input {
       font-size: 40px !important; } }
 
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=style2.css.map */
